--- a/src/styles/function-plot.css
+++ b/src/styles/function-plot.css
@@ -4,6 +4,11 @@
   .title {
     @apply fill-foreground;
   }
+  .annotations {
+    path {
+      @apply stroke-primary;
+    }
+  }
   .top-right-legend {
     @apply hidden;
   }
